--- a/MainForm.resx
+++ b/MainForm.resx
@@ -126,49 +126,16 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="saveToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAX5SURBVHhe7d1PS1VdGIbx8+kkBINAUDBoUBNBEEUcSANn
-        khBINXIo+BUcNJAE/QiO/JehJZWFgoIgnKb34GKd92Gv/a7t2nfwG+5wPdfdxEmDly9fDq2/PICe8wB6
-        zgPoOQ+g5zyAnvMAes4D6LmRA/j8+XMjNzc3Sff390l3d3dVozernZ2dRqip8gAKozcrihpBTZUHUBi9
-        WVHUCGqqPIDC6M2KokZQU+UBFEZvVhQ1gpoqD6AwerOiqBHUVHkAhdGbFUWNoKbKAyiM3qwoagQ1VSMH
-        sLm52civX7+S/vz5k3R9fV01erPa2tpqhJoqD6AwerOiqBHUVHkAhdGbFUWNoKbKAyiM3qwoagQ1VR5A
-        YfRmRVEjqKnyAAqjNyuKGkFNlQdQGL1ZUdQIaqo8gMLozYqiRlBTNZienh6mfPjwoZGLi4ukHz9+JH3/
-        /r1qV1dXSfSPKoKaKg+gMIquKGoENVUeQGEUXVHUCGqqPIDCKLqiqBHUVHkAhVF0RVEjqKnyAAqj6Iqi
-        RlBT5QEURtEVRY2gpsoDKIyiK4oaQU3VyAG8f/++kZOTk6Szs7Ok09PTqp2fnyd9+vSpEWqqPIDCKLqi
-        qBHUVHkAhVF0RVEjqKnyAAqj6IqiRlBT5QEURtEVRY2gpsoDKIyiK4oaQU2VB1AYRVcUNYKaKg+gMIqu
-        KGoENVWDycnJYcq7d+9adXx8nHR0dPSk0ZvUxsZGq6ip8gBaRm9SFC0naqo8gJbRmxRFy4maKg+gZfQm
-        RdFyoqbKA2gZvUlRtJyoqfIAWkZvUhQtJ2qqPICW0ZsURcuJmioPoGX0JkXRcqKmauQA1tbW7AmjpsoD
-        qBw1VR5A5aip8gAqR02VB1A5aqo8gMpRU+UBVI6aKg+gctRUjRzA6uqqPWHUVHkAlaOmygOoHDVVHkDl
-        qKnyACpHTZUHUDlqqjyAylFT5QFUjpqqwfPnz4cpb9++tSeMmioPoHLUVHkAlaOmygOoHDVVHkDlqKny
-        ACpHTZUHUDlqqjyAylFTNXIAy8vLSQsLC0mPj4/WwMrKSiPUVHkAHUdRI6ip8gA6jqJGUFPlAXQcRY2g
-        psoD6DiKGkFNlQfQcRQ1gpoqD6DjKGoENVUeQMdR1AhqqgZjY2PDFIoaQf9Zov13S0tLjVB05QF0HEWN
-        oOjKA+g4ihpB0ZUH0HEUNYKiKw+g4yhqBEVXHkDHUdQIiq48gI6jqBEUXXkAHUdRIyi6GjmAubm5pPn5
-        +aTDw8NGFhcXG7m9vU36/ft3q/7+/dsI3TRifHw8yQOAaDlR1Ai6aQRFVx4ARMuJokbQTSMouvIAIFpO
-        FDWCbhpB0ZUHANFyoqgRdNMIiq48AIiWE0WNoJtGUHTlAUC0nChqBN00gqIrDwCi5URRI+imERRdDaam
-        poYpr169SqJRqIODg0YmJiaS6FHq58+fSd++fWvV5eVlI3RTNTs7m0Q3UR4ARMuJokbQTRVFV3QT5QFA
-        tJwoagTdVFF0RTdRHgBEy4miRtBNFUVXdBPlAUC0nChqBN1UUXRFN1EeAETLiaJG0E0VRVd0E+UBQLSc
-        KGoE3VRRdEU3UR4ARMuJokbQTRVFV3QTNfj48eMwhX45pF6/fp20t7fXCP3QERcXF0knJyet+vr1ayNv
-        3rxphJopDwCi5URRIyhqBDVTHgBEy4miRlDUCGqmPACIlhNFjaCoEdRMeQAQLSeKGkFRI6iZ8gAgWk4U
-        NYKiRlAz5QFAtJwoagRFjaBmygOAaDlR1AiKGkHN1ODh4WGYQr/8UfSXqu3t7UaePXvWyP7+ftLu7m6r
-        vnz5kkTfKIqqZmZmkqiJ8gDg6DlRdEXfKIquKLqiJsoDgKPnRNEVfaMouqLoipooDwCOnhNFV/SNouiK
-        oitqojwAOHpOFF3RN4qiK4quqInyAODoOVF0Rd8oiq4ouqImygOAo+dE0RV9oyi6ouiKmigPAI6eE0VX
-        9I2i6IqiK2qiBsMRf+7v75PW19eTXrx4kUQ/lP1/PICe8wB6zgPoOQ+g5zyAnvMAes4D6LWx4T8hbAZr
-        AEPMigAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAABDSURBVDhPYzCsPPefEkxdA86dJg4j60ExgFiArGeQGYDN
+        v9gwsp7RMEAzgByMYsC1y9fAGJ2PjpH1DFIDCGGEnnP/AY81EUo9mcPLAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="newToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAA2SURBVDhPY/iPAzBMY0DBuMCoAdQwAF0hyRirICkYqyAp
+        GKsgKRgaFhgAXSEuMGoAxQb8/w8ALmPvD5QjCVUAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="openToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -189,61 +156,38 @@
   <data name="penSizeToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAAuSURBVDhPY/gPBQwMDCRhGBjEBhALBrEBhDAMDCcDCIEh
+        YAC6AkIYBgbagP//AUCLTc8WFnIEAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="penColorToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAABISURBVDhP7YxRCgAwCEK7/6VbNCQZ2gn24H2kUhQJHbwR
+        zuHgjXAOB2+Eczi2TWX/wVaCbVPZf8DlK1AdKcMWqI6UYQtUd408c19xq9EO9R4AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="backgroundColorToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAABfSURBVDhP1YwxDsAgDMT4/6fpicpKiu46sWDJQxzIEDMJ
+        bte0cQlu16wB0hysAdLcG6gdPLALroHa91MXXAO1vIS/N2oHD+yCa6CWP4B7A2q3HTDWAGkO2rgEt3sd
+        8wFCDx3/B7VlfgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="fontToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAAoSURBVDhPY/gPBQwMDCRhGBikBpAChqsBxGAYGKQGkAJG
+        DaDYgP//AT54y1Fee9igAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="canvasSizeToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAABUSURBVDhP3YxBCgAhDAP9/6e1dAkNMpW96sAcklRHMDsF
+        bSaWqaDNxDIVtJkVOk430d32AVihw2/ACh1+A1b4i78Jn/pgV9BmYpkK2kwsU0Hb55gLxb0p8zGtwOQA
+        AAAASUVORK5CYII=
 </value>
   </data>
   <data name="lineToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -277,19 +221,11 @@
         jFlJL4NxYmQlmQzyqQHBp6J+WUL1BZyaKPbhMA03AAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="textStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="textToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAAmSURBVDhPYwCC/xRirIKkYKyCxOP/OAC6Qlxg1IBRA0Bg
+        1ID//wEPrdFL4ko1PQAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
